fix(advisor): retire the outdated GC banner — modern Java 25 flag advice
The old boxed banner demanded flags that now actively HURT and one that
no longer exists: -XX:+ZGenerational was removed in JDK 24 (ZGC is
generational by default), -XX:+AlwaysPreTouch and -Xms=-Xmx commit the
entire heap resident from tick 0 (blocking ZGC uncommit — the exact
behaviour the RAM pass eliminated), and -XX:+UseLargePages just prints
a warning on hosts without hugepages configured.

The advisor now warns only about configurations that actively hurt
(ZGenerational present, AlwaysPreTouch under ZGC, missing ZUncommitDelay,
huge -Xms=-Xmx, non-ZGC/G1 collector) and prints compact lines instead
of the box, ending with the current recommendation:

  -Xms2G -Xmx<75-85% of allocation> -XX:+UseZGC -XX:ZUncommitDelay=60
  --add-modules=jdk.incubator.vector

Boot-verified with the old flag set: box gone, correct per-flag advice.